[package]
name = "revconn"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
base64 = "0.21.2"
bincode = "1.3.3"
chacha20 = "0.9.1"
clap = { version = "4.3.11", features = ["derive"] }
futures = "0.3.28"
rand = "0.8.5"
reqwest = "0.11.18"
serde = { version = "1.0.171", features = ["derive"] }
serde_json = "1.0.103"
tokio = { version = "1.29.1", features = [
    "io-util",
    "net",
    "macros",
    "rt-multi-thread",
] }
tokio-serde = { version = "0.8.0", features = ["bincode", "serde"] }
tokio-util = { version = "0.7.8", features = ["codec"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
